# kitchen-companion

./: .env.example  .gitignore  App.tsx  Dockerfile  Readme.md  agent copy 2.py  agent copy.py  agent.py  agent_enhanced.py  agent_prev.py  agent_prev2.py  agent_prev4.py  agent_prev5.py  agent_prev6.py  agent_ramsay_enhanced.py  build_vectorstore.py  livekit.toml  pyproject.toml  upload_server.py  verify_deps.py
server/: .env.example  index.js  package-lock.json  package.json
server/livekit-frontend/: .env.example  index.html  package-lock.json  package.json
server/livekit-frontend/src/: App.tsx  App_prev.tsx
tests/: test_agent.py
uploaded_pdfs/: pdf_list.txt
vectorstore/: index.pkl
